fix text wrap css

--- a/src/index.css
+++ b/src/index.css
@@ -109,8 +109,7 @@ html {
 
 pre {
   @apply bg-gray-200 px-4 my-4 rounded w-full;
-  display: block;
-  width: 100% !important;
+  white-space: normal;
 }
 
 .link {
